@@ -29,7 +29,7 @@
 
 <h3>Concepts</h3>
 <ul class="inlinelist">
-<li><a href="targets.html">Targets and Target-Groups</a></li>
+<li><a href="targets.html">Targets and Extension-Points</a></li>
 <li><a href="properties.html">Properties and PropertyHelpers</a></li>
 <li><a href="clonevm.html">ant.build.clonevm</a></li>
 <li><a href="sysclasspath.html">build.sysclasspath</a></li>
